First commit, lab done

--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "00cf591d-8a5b-499e-8715-1ad140867934",
    "metadata": {},
    "outputs": [],
@@ -23,15 +23,166 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "# Load the dataset (change the path if needed)\n",
-    "df = pd.read_csv('../data/heart.csv')"
+    "df = pd.read_csv('../data/heart.csv')\n",
+    "\n",
+    "seed = 1\n",
+    "np.random.seed(seed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "0bb5ea1c-a4e5-4419-bae8-661fe2d82711",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>cp</th>\n",
+       "      <th>trestbps</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>fbs</th>\n",
+       "      <th>restecg</th>\n",
+       "      <th>thalach</th>\n",
+       "      <th>exang</th>\n",
+       "      <th>oldpeak</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>ca</th>\n",
+       "      <th>thal</th>\n",
+       "      <th>target</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>63</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>145</td>\n",
+       "      <td>233</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>37</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>130</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>187</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>130</td>\n",
+       "      <td>204</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>172</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>56</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>120</td>\n",
+       "      <td>236</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>178</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>57</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>354</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>163</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  slope  \\\n",
+       "0   63    1   3       145   233    1        0      150      0      2.3      0   \n",
+       "1   37    1   2       130   250    0        1      187      0      3.5      0   \n",
+       "2   41    0   1       130   204    0        0      172      0      1.4      2   \n",
+       "3   56    1   1       120   236    0        1      178      0      0.8      2   \n",
+       "4   57    0   0       120   354    0        1      163      1      0.6      2   \n",
+       "\n",
+       "   ca  thal  target  \n",
+       "0   0     1       1  \n",
+       "1   0     2       1  \n",
+       "2   0     2       1  \n",
+       "3   0     2       1  \n",
+       "4   0     2       1  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.head()"
    ]
@@ -55,7 +206,8 @@
     "y = df[\"target\"]\n",
     "\n",
     "# Train-test split\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state=0)\n",
+    "# Cambio el test size de 0.25 a 0.2 y el random_state usando seed = 1 \n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=seed)\n",
     "\n",
     "# Feature scaling (for certain models, e.g., SVM or logistic regression, not always necessary for trees)\n",
     "scaler = StandardScaler()\n",
@@ -75,23 +227,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d39376f1-b4ca-44c0-8364-d11b9a7605f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy del modelo baseline (Decision Tree): 0.7894736842105263\n"
+     ]
+    }
+   ],
    "source": [
     "#Create and Train a Decision Tree Classifier and print the train and test accuracy\n",
-    "\n",
+    "# Importar el modelo Árbol de Decisión y la métrica de evaluación\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.metrics import accuracy_score, mean_squared_error\n",
     "\n",
     "# Train Decision Tree\n",
-    "\n",
+    "# Crear el modelo baseline (árbol de decisión sin limitar profundidad)\n",
+    "decision_tree = DecisionTreeClassifier(random_state=seed)\n",
+    "# Entrenar el modelo con los datos de entrenamiento\n",
+    "decision_tree.fit(X_train_scaled, y_train)\n",
     "\n",
     "# Predictions and evaluation\n",
+    "# Realizar predicciones sobre el conjunto de test\n",
+    "y_test_pred = decision_tree.predict(X_test_scaled)\n",
     "\n",
+    "# Evaluate performance\n",
+    "# Calcular la accuracy en test\n",
+    "accuracy = accuracy_score(y_test, y_test_pred)\n",
     "\n",
-    "# Evaluate performance\n"
+    "# Mostrar el resultado\n",
+    "print(\"Accuracy del modelo baseline (Decision Tree):\", accuracy)"
    ]
   },
   {
@@ -135,24 +304,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "8fc76766-a90c-47ed-bd02-66827a1dc115",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy del Random Forest: 0.8289473684210527\n"
+     ]
+    }
+   ],
    "source": [
     "# Create and Train a BaggingClassifier. \n",
     "# Use as base estimator a weak decision tree (max_depth=1) and 100 estimators to really over a lot of different data samples\n",
     "# Print the train and test accuracy\n",
     "\n",
-    "from sklearn.ensemble import BaggingClassifier\n",
+    "# Importar Random Forest y métrica de evaluación\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "# Train BaggingClassifier\n",
+    "# Crear el modelo Random Forest\n",
+    "# n_estimators = número de árboles en el bosque\n",
+    "rf = RandomForestClassifier(n_estimators=100, random_state=seed)\n",
     "\n",
+    "# Entrenar el modelo con los datos de entrenamiento\n",
+    "rf.fit(X_train_scaled, y_train)\n",
     "\n",
-    "# Predictions and evaluation\n",
+    "# Realizar predicciones sobre el conjunto de test\n",
+    "y_test_pred_rf = rf.predict(X_test_scaled)\n",
     "\n",
+    "# Calcular la accuracy en test\n",
+    "accuracy_rf = accuracy_score(y_test, y_test_pred_rf)\n",
     "\n",
-    "# Evaluate performance\n"
+    "# Mostrar el resultado\n",
+    "print(\"Accuracy del Random Forest:\", accuracy_rf)"
    ]
   },
   {
@@ -192,24 +379,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "4bba1773-b0b0-44ba-a838-58b8c466ff88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/anaconda3/envs/xgb_env/lib/python3.10/site-packages/xgboost/training.py:199: UserWarning: [00:05:23] WARNING: /Users/runner/miniforge3/conda-bld/xgboost-split_1765326940857/work/src/learner.cc:790: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  bst.update(dtrain, iteration=i, fobj=obj)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy del XGBoost: 0.8289473684210527\n"
+     ]
+    }
+   ],
    "source": [
-    "# Create and Train a AdaBoostClassifier. \n",
-    "# Use as base estimator a weak decision tree (max_depth=1) and 100 estimators to really target the specific behaviors of this phenomenon\n",
-    "# Print the train and test accuracy\n",
+    "# Importar XGBoost y métrica de evaluación\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "# Crear el modelo XGBoost\n",
+    "xgb = XGBClassifier(\n",
+    "    n_estimators=200,      # número de árboles\n",
+    "    learning_rate=0.001,     # velocidad de aprendizaje\n",
+    "    max_depth=4,           # profundidad máxima de cada árbol\n",
+    "    random_state=seed,\n",
+    "    use_label_encoder=False,\n",
+    "    eval_metric='logloss'  # evita warning de evaluación\n",
+    ")\n",
     "\n",
-    "# Train AdaBoost\n",
+    "# Entrenar el modelo con los datos de entrenamiento\n",
+    "xgb.fit(X_train_scaled, y_train)\n",
     "\n",
+    "# Realizar predicciones sobre el conjunto de test\n",
+    "y_test_pred_xgb = xgb.predict(X_test_scaled)\n",
     "\n",
-    "# Predictions and evaluation\n",
+    "# Calcular la accuracy en test\n",
+    "accuracy_xgb = accuracy_score(y_test, y_test_pred_xgb)\n",
     "\n",
-    "\n",
-    "# Evaluate performance\n"
+    "# Mostrar el resultado\n",
+    "print(\"Accuracy del XGBoost:\", accuracy_xgb)\n",
+    "\n"
    ]
   },
   {
@@ -235,7 +453,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "xgb_env",
    "language": "python",
    "name": "python3"
   },
@@ -249,7 +467,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
